--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,12 @@
       <version>2.8.9</version> //Check for the latest
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.15.0</version> // check for the latest version
+    </dependency>
+
+
   </dependencies>
 </project>
