--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
       <version>2.15.0</version> // check for the latest version
     </dependency>
 
+    <dependency>
+      <groupId>com.github.fge</groupId>
+      <artifactId>json-schema-validator</artifactId>
+      <version>2.2.6</version>
+    </dependency>
+
 
   </dependencies>
 </project>
