--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,19 @@
     </dependency>
 
 
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.15.0</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-csv</artifactId>
+        <version>2.15.0</version>
+      </dependency>
+
+
+
   </dependencies>
 </project>
